--- a/articles/network-watcher/index.yml
+++ b/articles/network-watcher/index.yml
@@ -14,11 +14,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/24/2018
   ms.author: jdial
-  ms.openlocfilehash: d8f4996aedec1083ccdb3e05e17bf068bdeffe22
-  ms.sourcegitcommit: 6e43006c88d5e1b9461e65a73b8888340077e8a2
+  ms.openlocfilehash: 65f301d231a3a5c4da9edfe30f3871bf95a9c02c
+  ms.sourcegitcommit: ca05dd10784c0651da12c4d58fb9ad40fdcd9b10
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/01/2018
+  ms.lasthandoff: 05/03/2018
 abstract:
   description: Lär dig hur du använder Azure Network Watcher. Snabbstarter, självstudier med mera visar dig hur du kan få insikter i ditt virtuella Azure-nätverk med verktyg som paketinsamling och NSG-flödesloggar som hjälper dig att diagnostisera problem med trafikfiltrering och routning samt övervaka anslutningar.
 sections:
@@ -49,7 +49,9 @@ sections:
     style: ordered
     items:
     - html: <a href="/azure/network-watcher/diagnose-vm-network-routing-problem">Diagnostisera problem med nätverksroutning för virtuella datorer</a>
-    - html: <a href="/azure/network-watcher/connection-monitor">Övervaka nätverkskommunikation mellan en virtuell dator och en slutpunkt</a>
+    - html: <a href="/azure/network-watcher/connection-monitor">Övervaka nätverkskommunikation mellan två virtuella datorer</a>
+    - html: <a href="/azure/network-watcher/diagnose-communication-problem-between-networks">Diagnostisera ett kommunikationsproblem mellan nätverk</a>
+    - html: <a href="/azure/network-watcher/network-watcher-nsg-flow-logging-portal">Logga nätverkstrafik till och från en virtuell dator</a>
 - title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
