--- a/articles/azure-maps/toc.yml
+++ b/articles/azure-maps/toc.yml
@@ -30,6 +30,8 @@
       href: render-coverage.md
     - name: Routningstäckning
       href: routing-coverage.md
+    - name: Söka efter kategorier
+      href: search-categories.md
     - name: Språk som stöds
       href: supported-languages.md
 - name: Instruktionsguider
