--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -62,38 +62,42 @@
               href: 'https://github.com/Azure-Samples/active-directory-b2c-dotnet-desktop'
             - name: Xamarin
               href: 'https://github.com/Azure-Samples/active-directory-b2c-xamarin-native'
-        - name: Webbappar
-          items:
-            - name: Översikt
-              href: active-directory-b2c-reference-oidc.md
-            - name: ASP.NET
-              href: active-directory-b2c-devquickstarts-web-dotnet-susi.md
-            - name: ASP.NET Core
-              href: 'https://github.com/Azure-Samples/active-directory-b2c-dotnetcore-webapp'
-            - name: Node.js
-              href: active-directory-b2c-devquickstarts-web-node.md
-        - name: Appar med en sida
-          items:
-            - name: Översikt
-              href: active-directory-b2c-reference-spa.md
-            - name: JavaScript med MSAL
-              href: 'https://github.com/Azure-Samples/active-directory-b2c-javascript-msal-singlepageapp'
-            - name: JavaScript med Hello
-              href: 'https://github.com/Azure-Samples/active-directory-b2c-javascript-singlepageapp-dotnet-webapi'
-        - name: 'Webb-API:er'
-          items:
-            - name: ASP.NET
-              href: active-directory-b2c-devquickstarts-api-dotnet.md
-            - name: ASP.NET Core
-              href: 'https://github.com/Azure-Samples/active-directory-b2c-dotnetcore-webapi'
-            - name: Node.js
-              href: 'https://github.com/Azure-Samples/active-directory-b2c-javascript-nodejs-webapi'
-            - name: Anropa ett .NET-webb-API
-              href: active-directory-b2c-devquickstarts-web-api-dotnet.md
+        - name: Autentiseringsuppgifter för lösenord för resursägare
+          href: configure-ropc.md
+    - name: Webbappar
+      items:
+        - name: Översikt
+          href: active-directory-b2c-reference-oidc.md
+        - name: ASP.NET
+          href: active-directory-b2c-devquickstarts-web-dotnet-susi.md
+        - name: ASP.NET Core
+          href: 'https://github.com/Azure-Samples/active-directory-b2c-dotnetcore-webapp'
+        - name: Node.js
+          href: active-directory-b2c-devquickstarts-web-node.md
+    - name: Appar med en sida
+      items:
+        - name: Översikt
+          href: active-directory-b2c-reference-spa.md
+        - name: JavaScript med MSAL
+          href: 'https://github.com/Azure-Samples/active-directory-b2c-javascript-msal-singlepageapp'
+        - name: JavaScript med Hello
+          href: 'https://github.com/Azure-Samples/active-directory-b2c-javascript-singlepageapp-dotnet-webapi'
+    - name: 'Webb-API:er'
+      items:
+        - name: ASP.NET
+          href: active-directory-b2c-devquickstarts-api-dotnet.md
+        - name: ASP.NET Core
+          href: 'https://github.com/Azure-Samples/active-directory-b2c-dotnetcore-webapi'
+        - name: Node.js
+          href: 'https://github.com/Azure-Samples/active-directory-b2c-javascript-nodejs-webapi'
+        - name: Anropa ett .NET-webb-API
+          href: active-directory-b2c-devquickstarts-web-api-dotnet.md
     - name: Guider
       items:
         - name: Konfigurera identitetsprovidrar
           items:
+            - name: Anpassad OpenID Connect
+              href: active-directory-b2c-setup-oidc-idp.md
             - name: Microsoft-konto
               href: active-directory-b2c-setup-msa-app.md
             - name: Facebook
@@ -102,7 +106,7 @@
               href: active-directory-b2c-setup-goog-app.md
             - name: Amazon
               href: active-directory-b2c-setup-amzn-app.md
-            - name: LinkdIn
+            - name: LinkedIn
               href: active-directory-b2c-setup-li-app.md
             - name: Twitter
               href: active-directory-b2c-setup-twitter-app.md
@@ -112,10 +116,6 @@
               href: active-directory-b2c-setup-qq-app.md
             - name: WeChat
               href: active-directory-b2c-setup-wechat-app.md
-            - name: Azure AD (enskild klient)
-              href: active-directory-b2c-setup-oidc-azure-active-directory.md
-            - name: Anpassad OpenID Connect
-              href: active-directory-b2c-setup-oidc-idp.md
         - name: Konfigurera återställning av lösenord för självbetjäning
           href: active-directory-b2c-reference-sspr.md
         - name: Anpassa gränssnittet
@@ -141,10 +141,12 @@
           href: active-directory-b2c-reference-language-customization.md
         - name: Använda rapporterings-API
           href: active-directory-b2c-reference-usage-reporting-api.md
-        - name: Åtkomst till granskningsloggar
-          href: active-directory-b2c-reference-audit-logs.md
+        - name: Hantera användardata
+          href: manage-user-data.md
         - name: Migrera användare
           href: active-directory-b2c-user-migration.md
+        - name: Migrera användare med sociala identiteter
+          href: active-directory-b2c-social-migration.md
         - name: Med hjälp av b2clogin.com
           href: b2clogin.md
         - name: Med hjälp av åldershantering
@@ -159,10 +161,8 @@
               href: active-directory-b2c-get-started-custom.md
             - name: Konfigurera OIDC/OAUTH2-providrar
               items:
-                - name: Azure AD (en enda klient)
+                - name: Azure AD
                   href: active-directory-b2c-setup-aad-custom.md
-                - name: Azure AD (flera klienter)
-                  href: active-directory-b2c-setup-commonaad-custom.md
                 - name: Microsoft-konto
                   href: active-directory-b2c-custom-setup-msa-idp.md
                 - name: Google +
@@ -171,6 +171,8 @@
                   href: active-directory-b2c-custom-setup-li-idp.md
                 - name: Twitter
                   href: active-directory-b2c-custom-setup-twitter-idp.md
+                - name: Flera innehavare
+                  href: active-directory-b2c-setup-commonaad-custom.md
             - name: Konfigurera SAML-providrar
               items:
                 - name: ADFS
@@ -207,6 +209,8 @@
                   href: active-directory-b2c-reference-password-change-custom.md
                 - name: Aktivera ”Håll mig inloggad”
                   href: active-directory-b2c-reference-kmsi-custom.md
+            - name: Hantera användarkonton.
+              href: manage-user-access.md
             - name: Felsökning
               items:
                 - name: Samla in loggar med Application Insights
