--- a/articles/azure-policy/index.yml
+++ b/articles/azure-policy/index.yml
@@ -2,8 +2,8 @@
 documentType: LandingData
 title: Dokumentation om Azure Policy
 metadata:
-  title: Dokumentation om Azure Policy – självstudier, API-referens | Microsoft Docs
-  description: Med Azure Policy kan du hantera och förebygga IT-problem med principdefinitioner som framtvingar regler och åtgärder för dina resurser. Med Azure Policy blir resurserna kompatibla med företagets standarder och serviceavtal. Lär dig hur du skapar, tilldelar och hanterar principdefinitioner med våra snabbstarter, vägledningar och exempel.
+  title: Dokumentation om Azure Policy – självstudier, API-referens
+  description: Med Azure Policy kan du hantera och förebygga IT-problem med principdefinitioner som framtvingar regler och effekter för dina resurser. Med Azure Policy blir resurserna kompatibla med företagets standarder och serviceavtal. Lär dig hur du skapar, tilldelar och hanterar principdefinitioner med våra snabbstarter, vägledningar och exempel.
   services: azure-policy
   author: DCtheGeek
   manager: carmonm
@@ -11,15 +11,15 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
-  ms.date: 12/18/2017
+  ms.date: 05/07/2018
   ms.author: dacoulte
-  ms.openlocfilehash: 0ca9efe0c1c1871265da127acfd76e90126b59ad
-  ms.sourcegitcommit: e2adef58c03b0a780173df2d988907b5cb809c82
+  ms.openlocfilehash: f83eb04bee24f8b2e07e1fe0da1b6d369ae8cbfd
+  ms.sourcegitcommit: d98d99567d0383bb8d7cbe2d767ec15ebf2daeb2
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 04/28/2018
+  ms.lasthandoff: 05/10/2018
 abstract:
-  description: Med Azure Policy kan du hantera och förebygga IT-problem med principdefinitioner som framtvingar regler och åtgärder för dina resurser. Med Azure Policy blir resurserna kompatibla med företagets standarder och serviceavtal. Lär dig hur du skapar, tilldelar och hanterar principdefinitioner med våra snabbstarter, vägledningar och exempel.
+  description: Med Azure Policy kan du hantera och förebygga IT-problem med principdefinitioner som framtvingar regler och effekter för dina resurser. Med Azure Policy blir resurserna kompatibla med företagets standarder och serviceavtal. Lär dig hur du skapar, tilldelar och hanterar principdefinitioner med våra snabbstarter, vägledningar och exempel.
 sections:
 - title: Snabbstarter på 5 minuter
   items:
