--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -49,6 +49,8 @@
       href: backup-azure-security-feature.md
     - name: Konfigurera säkerhetskopiering offline
       href: backup-azure-backup-import-export.md
+    - name: Offlinesäkerhetskopiering för DPM och Azure Backup Server
+      href: backup-azure-backup-server-import-export-.md
     - name: Ersätt ditt bandbibliotek
       href: backup-azure-backup-cloud-as-tape.md
 - name: Gör så här för att
