--- a/articles/cosmos-db/index.yml
+++ b/articles/cosmos-db/index.yml
@@ -14,11 +14,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 04/26/2018
   ms.author: mimig
-  ms.openlocfilehash: 83cb9b2f0bf1082efb13e1c92eb8e42945a6000e
-  ms.sourcegitcommit: e2adef58c03b0a780173df2d988907b5cb809c82
+  ms.openlocfilehash: 0981d1ef118ff08450b510204447427fc8475327
+  ms.sourcegitcommit: d98d99567d0383bb8d7cbe2d767ec15ebf2daeb2
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 04/28/2018
+  ms.lasthandoff: 05/10/2018
 abstract:
   description: Azure Cosmos DB är en globalt distribuerad databas för flera datamodeller. Använd dessa snabbstarter, självstudier och exempel för att utveckla dokument, nyckelvärden, breda kolumner och diagramdatabaser genom att använda populära API:er och programmeringsmodeller. Lär dig sedan att replikera data över flera Azure-regioner och skala dataflödet oberoende av lagringen, samtidigt som du drar nytta av omfattande serviceavtal.
   aside:
@@ -154,6 +154,7 @@ sections:
     - html: Global databasreplikering med Azure Cosmos DB&#58; <a href="/azure/cosmos-db/tutorial-global-distribution-sql-api">SQL</a> | <a href="/azure/cosmos-db/tutorial-global-distribution-mongodb">MongoDB</a> | <a href="/azure/cosmos-db/tutorial-global-distribution-table">Table</a> | <a href="/azure/cosmos-db/tutorial-global-distribution-graph">Graph</a>
     - html: <a href="local-emulator">Utveckla ditt program lokalt med hjälp av emulatorn</a>
     - html: <a href="/azure/cosmos-db/tutorial-functions-http-trigger">Skapa en HTTP-utlösare med en Azure Cosmos DB-indatabindning</a>
+    - html: <a href="https://docs.microsoft.com/learn/build-serverless-app/index">Skapa ett grundläggande webbprogram för att agera värd åt statiska filer i Cosmos DB</a>
 - title: Referens
   items:
   - type: list
