--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -406,19 +406,19 @@
       href: /python/api/overview/azure/datafactory?view=azure-python
 - name: Resurser
   items:
-    - name: VANLIGA FRÅGOR OCH SVAR
-      href: frequently-asked-questions.md
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=analytics'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/data-factory/'
-    - name: MSDN-forum
-      href: 'https://social.msdn.microsoft.com/Forums/home?forum=AzureDataFactory'
-    - name: Stack Overflow
+    - name: Ställ en fråga – MSDN-forum
+      href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureDataFactory&filter=alltypes&sort=lastpostdesc'
+    - name: Ställ en fråga – Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-data-factory'
     - name: Begär en funktion
       href: 'https://feedback.azure.com/forums/270578-azure-data-factory'
-    - name: Regional tillgänglighet
-      href: 'https://azure.microsoft.com/regions/services/'
+    - name: VANLIGA FRÅGOR OCH SVAR
+      href: frequently-asked-questions.md
+    - name: Översikt
+      href: 'https://azure.microsoft.com/en-us/roadmap/?tag=data-factory'
+    - name: Prissättning
+      href: 'https://azure.microsoft.com/pricing/details/data-factory/'
+    - name: Tillgänglighet efter region
+      href: 'https://azure.microsoft.com/global-infrastructure/services/'
     - name: Supportalternativ
       href: 'https://azure.microsoft.com/support/options/'
