--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -13,11 +13,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 05/01/2018
   ms.author: heidist
-  ms.openlocfilehash: e947f678905e15619577f3dd5feb0287c6a14d54
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
+  ms.openlocfilehash: ac99a23ede3a8adbf60d210b74f642ce4b0131a4
+  ms.sourcegitcommit: d98d99567d0383bb8d7cbe2d767ec15ebf2daeb2
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
+  ms.lasthandoff: 05/10/2018
 abstract:
   description: Lär dig hur du skapar en söklösning för företag med privat, heterogent innehåll med hjälp av Azure Search. Självstudier, API-referenser och andra dokument visar dig hur du konsoliderar sökbart innehåll till ett enda snabbt frågningsbart index med hjälp av enkel-till-avancerad syntax för en mängd olika scenarier. <p/><b>Ny kognitiv förhandsversion för sökning.</b> Använd en förhandsversion av REST API för att binda AI-drivna algoritmer för indexering av pipeline. Extrahera data och anropa bearbetning av naturligt språk och bilder för att omvandla ostrukturerat innehåll i råformat till sökbart innehåll i ett Azure Search-index. <p/>Kom igång med <a href="/azure/search/cognitive-search-quickstart-blob">resurser och exempeldata</a> eller läs mer i <a href="/azure/search/cognitive-search-concept-intro">Koncept</a>.
   aside:
@@ -56,7 +56,7 @@ sections:
   - type: list
     style: ordered
     items:
-    - html: <a href="/azure/search/cognitive-search-get-start-preview">Utökad indexering med kognitiva kunskaper</a>
+    - html: '<a href="/azure/search/cognitive-search-tutorial-blob">Lär dig REST API: erna för kognitiva kunskaper</a>'
     - html: <a href="/azure/search/search-howto-dotnet-sdk">Så här använder du Azure Search med .NET</a>
     - html: <a href="/azure/search/search-indexer-tutorial">Indexera Azure SQL Database-innehåll med .NET</a>
     - html: <a href="/azure/search/search-semi-structured-data">Indexera halvstrukturerade data i Azure Blob Storage med REST</a>
