--- a/articles/virtual-machine-scale-sets/index.yml
+++ b/articles/virtual-machine-scale-sets/index.yml
@@ -12,11 +12,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/14/2018
   ms.author: carolz
-  ms.openlocfilehash: ea8437adf7224c4605f31ccdea281669b89bb7c9
-  ms.sourcegitcommit: d74657d1926467210454f58970c45b2fd3ca088d
+  ms.openlocfilehash: d26c3a94c166a91644397e4a31aeede55ec29284
+  ms.sourcegitcommit: d98d99567d0383bb8d7cbe2d767ec15ebf2daeb2
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 03/28/2018
+  ms.lasthandoff: 05/10/2018
 abstract:
   description: Med skalningsuppsättningar för virtuella Azure-datorer kan du skapa och hantera grupper med identiska, belastningsutjämnade virtuella datorer med automatisk skalning. Lär dig hur du skapar, konfigurerar, hanterar och automatiskt skalar VM-skalningsuppsättningar med våra snabbstarter, självstudier och exempel.
 sections:
@@ -51,6 +51,7 @@ sections:
     - html: Använda anpassade VM-avbildningar med <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-cli">Azure CLI 2.0</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-use-custom-image-powershell">Azure Powershell</a>
     - html: Distribuera appar till skalningsuppsättningar med <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-cli">Azure CLI 2.0</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-install-apps-powershell">Azure Powershell</a>
     - html: Autoskala skalningsuppsättningar med <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-cli">Azure CLI 2.0</a> eller <a href="/azure/virtual-machine-scale-sets/tutorial-autoscale-powershell">Azure Powershell</a>
+    - html: <a href="https://docs.microsoft.com/learn/deploy-custom-vmss-app/index">Distribuera appar till en skalningsuppsättning för en virtuell Azure-dator med en anpassad Packer-avbildning</a>
 - title: Exempel
   items:
   - type: paragraph
