--- a/articles/virtual-machines/linux/index.yml
+++ b/articles/virtual-machines/linux/index.yml
@@ -14,11 +14,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 01/23/2017
   ms.author: carolz
-  ms.openlocfilehash: 374e6a75d9ddfb5765418b1044dc525f14f86f67
-  ms.sourcegitcommit: ca05dd10784c0651da12c4d58fb9ad40fdcd9b10
+  ms.openlocfilehash: 9e60a25d8e41de22010a8b1844fdb6267868333c
+  ms.sourcegitcommit: d98d99567d0383bb8d7cbe2d767ec15ebf2daeb2
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/03/2018
+  ms.lasthandoff: 05/10/2018
 abstract:
   description: Virtuella Linux-datorer i Azure tillhandahåller en säker, virtualiserad infrastruktur på begäran och med hög skalbarhet med hjälp av Red Hat, Ubuntu eller valfri annan Linux-distribution. Lär dig hur du skapar, konfigurerar, hanterar, uppdaterar och skalar virtuella Linux-datorer med våra snabbstarter, självstudier och exempel.
   aside:
@@ -73,6 +73,7 @@ sections:
     - html: <a href="/azure/virtual-machines/linux/tutorial-build-deploy-jenkins">CI/CD med Team Services</a>
     - html: Skapa en webbserverstack med <a href="/azure/virtual-machines/linux/tutorial-lamp-stack">LAMP</a>, <a href="/azure/virtual-machines/linux/tutorial-lemp-stack">LEMP</a> eller <a href="/azure/virtual-machines/linux/tutorial-mean-stack">MEAN</a>
     - html: <a href="/azure/virtual-machines/linux/tutorial-secure-web-server">Skydda en webbserver med SSL</a>
+    - html: <a href="https://docs.microsoft.com/learn/deploy-custom-vmss-app/index">Distribuera appar till en skalningsuppsättning för en virtuell Azure-dator med en anpassad Packer-avbildning</a>
 - title: Kostnadsfri videoutbildning för Pluralsight
   items:
   - type: list
