--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -96,8 +96,6 @@
       items:
         - name: Konfigurera identitetsprovidrar
           items:
-            - name: Anpassad OpenID Connect
-              href: active-directory-b2c-setup-oidc-idp.md
             - name: Microsoft-konto
               href: active-directory-b2c-setup-msa-app.md
             - name: Facebook
@@ -116,6 +114,8 @@
               href: active-directory-b2c-setup-qq-app.md
             - name: WeChat
               href: active-directory-b2c-setup-wechat-app.md
+            - name: Anpassad OpenID Connect
+              href: active-directory-b2c-setup-oidc-idp.md
         - name: Konfigurera återställning av lösenord för självbetjäning
           href: active-directory-b2c-reference-sspr.md
         - name: Anpassa gränssnittet
@@ -141,6 +141,8 @@
           href: active-directory-b2c-reference-language-customization.md
         - name: Använda rapporterings-API
           href: active-directory-b2c-reference-usage-reporting-api.md
+        - name: Åtkomst till granskningsloggar
+          href: active-directory-b2c-reference-audit-logs.md
         - name: Hantera användardata
           href: manage-user-data.md
         - name: Migrera användare
@@ -161,8 +163,10 @@
               href: active-directory-b2c-get-started-custom.md
             - name: Konfigurera OIDC/OAUTH2-providrar
               items:
-                - name: Azure AD
+                - name: Azure AD (en enda klient)
                   href: active-directory-b2c-setup-aad-custom.md
+                - name: Azure AD (flera klienter)
+                  href: active-directory-b2c-setup-commonaad-custom.md
                 - name: Microsoft-konto
                   href: active-directory-b2c-custom-setup-msa-idp.md
                 - name: Google +
@@ -171,8 +175,6 @@
                   href: active-directory-b2c-custom-setup-li-idp.md
                 - name: Twitter
                   href: active-directory-b2c-custom-setup-twitter-idp.md
-                - name: Flera innehavare
-                  href: active-directory-b2c-setup-commonaad-custom.md
             - name: Konfigurera SAML-providrar
               items:
                 - name: ADFS
