--- a/articles/app-service/toc.yml
+++ b/articles/app-service/toc.yml
@@ -52,7 +52,7 @@
     - name: Bind SSL-certifikat
       href: app-service-web-tutorial-custom-ssl.md
     - name: Lägg till CDN
-      href: ../cdn/app-service-web-tutorial-content-delivery-network.md?toc=%2fazure%2fcdn%2ftoc.json
+      href: ../cdn/cdn-add-to-web-app.md?toc=%2fazure%2fcdn%2ftoc.json
     - name: Autentisera användare
       href: app-service-web-tutorial-auth-aad.md
     - name: Distribuera appar till Azure App Service med VSTS och CI/CD
