--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -6,14 +6,14 @@
       href: azure-stack-poc.md
     - name: Viktig information
       items:
+        - name: 1804 uppdatering
+          href: azure-stack-update-1804.md
         - name: 1803 uppdatering
           href: azure-stack-update-1803.md
         - name: 1802 uppdatering
           href: azure-stack-update-1802.md
         - name: 1712 uppdatering
           href: azure-stack-update-1712.md
-        - name: 1711 uppdatering
-          href: azure-stack-update-1711.md
 - name: Snabbstarter
   expanded: true
   items:
@@ -156,6 +156,8 @@
               href: azure-stack-backup-enable-backup-powershell.md
             - name: Säkerhetskopiera Azure Stack
               href: azure-stack-backup-back-up-azure-stack.md
+            - name: Säkerhetskopiera filer och program på Azure-stacken
+              href: ..\backup\backup-mabs-files-applications-azure-stack.md?toc=%2fazure%2fazure-stack%2ftoc.json
             - name: Återställa från oåterkallelig dataförlust
               href: azure-stack-backup-recover-data.md
             - name: Metodtips för säkerhetskopiering
@@ -245,6 +247,8 @@
               href: azure-stack-app-service-configure-deployment-sources.md
             - name: Apptjänst på Azure-stacken uppdatering 1 viktig information
               href: azure-stack-app-service-release-notes-update-one.md
+            - name: Apptjänst på Azure-stacken uppdatering 2 viktig information
+              href: azure-stack-app-service-release-notes-update-two.md
         - name: Lägga till i Marketplace
           items:
             - name: Marketplace-översikt
