--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -17,11 +17,13 @@
           href: role-assignments-powershell.md
         - name: REST
           href: role-assignments-rest.md
+    - name: Förstå rolldefinitioner
+      href: role-definitions.md
     - name: Inbyggda roller
       href: built-in-roles.md
     - name: Anpassade roller
       href: custom-roles.md
-    - name: Tilldela anpassade roller för interna och externa användare
+    - name: Hantera rolltilldelningar för externa användare
       href: role-assignments-external-users.md
     - name: Aktivitetsloggar
       href: change-history-report.md
