--- a/articles/media-services/index.yml
+++ b/articles/media-services/index.yml
@@ -14,36 +14,71 @@ metadata:
   ms.topic: landing-page
   ms.date: 04-21-2018
   ms.author: juliako
-  ms.openlocfilehash: 6bee2f17db6d1f79dd2ba84a278ff6a82b871a9e
-  ms.sourcegitcommit: e221d1a2e0fb245610a6dd886e7e74c362f06467
+  ms.openlocfilehash: 781cd8eb2796062b3cebb6b848ee5f1fe204f460
+  ms.sourcegitcommit: b6319f1a87d9316122f96769aab0d92b46a6879a
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/07/2018
+  ms.lasthandoff: 05/20/2018
 abstract:
   description: Azure Media Services är en molnbaserad plattform för att skapa lösningar för videor i sändningskvalitet för direktuppspelning, förbättra tillgängligheten och distributionen, analysera innehållet och mycket mer.
 sections:
-- title: 
-  items:
+- items:
   - type: list
     style: cards
-    className: cardsA
+    className: cardsM
+    columns: 2
     items:
-    - html: <a href="/azure/media-services/latest/"> <br><strong>Azure Media Services v3 (förhandsversion)</strong></a> <p>Lär dig mer om att strömma på begäran, sända live och analysera dina videoklipp med Media Services v3.</p>
-    - html: <a href="/azure/media-services/previous/"> <br><strong>Azure Media Services v2 (GA)</strong></a> <p>Lär dig mer om att strömma på begäran, sända live och analysera dina videoklipp med Media Services v2.</p>
+    - href: /azure/media-services/latest/
+      html: <p>Lär dig mer om att koda, strömma på begäran, sända live och analysera dina videor med Media Services v3.</p>
+      image:
+        src: media/index/media-services-v3.png
+      title: Azure Media Services v3 (förhandsversion)
+    - href: /azure/media-services/previous/
+      html: <p>Lär dig mer om att koda, strömma på begäran och sända videor live med Media Services v2.</p>
+      image:
+        src: media/index/media-services-v2.png
+      title: Azure Media Services v2 (GA)
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Lär dig hur du skapar ett Media Services-konto, börjar koda dina videoklipp och använder Azure Media Player för att spela upp dem:'
-  - type: list
-    style: ordered
-    items:
-    - html: Strömma filer&#58; <a href="/azure/media-services/latest/stream-files-dotnet-quickstart">v3</a> | <a href="/azure/media-services/previous/media-services-portal-vod-get-started">v2</a>
+    text: 'Lär dig hur du strömmar live och på begäran med Media Services:'
+  - type: table
+    style: dataMatrix
+    columns:
+    - image:
+        src: media/index/stream.png
+      title: Strömma live
+    - image:
+        src: media/index/stream.png
+      title: Strömma filer
+    rows:
+    - title: Media Services v3
+      values:
+      - href: https://github.com/Azure-Samples/media-services-v3-dotnet-core-tutorials/tree/master/NETCore/Live
+      - href: /azure/media-services/latest/stream-files-dotnet-quickstart
+    - title: Media Services v2
+      values:
+      - href: /azure/media-services/previous/media-services-portal-live-passthrough-get-started
+      - href: /azure/media-services/previous/media-services-portal-vod-get-started
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: 'Lär dig mer om att strömma filer och analysera dina videoklipp med Media Services:'
-  - type: list
-    style: ordered
-    items:
-    - html: Ladda upp, koda, strömma videoklipp&#58; <a href="/azure/media-services/latest/stream-files-tutorial-with-api">v3</a> | <a href="/azure/media-services/previous/media-services-dotnet-get-started">v2</a>
-    - html: Analysera videoklipp&#58; <a href="/azure/media-services/latest/analyze-videos-tutorial-with-api">v3</a> | <a href="/azure/media-services/previous/media-services-analytics-overview">v2</a>
+    text: 'Lär dig mer om att strömma filer och analysera dina videor med Media Services:'
+  - type: table
+    style: dataMatrix
+    columns:
+    - image:
+        src: media/index/encode.png
+      title: Koda och strömma
+    - image:
+        src: media/index/analyze.png
+      title: Analysera videor
+    rows:
+    - title: Media Services v3
+      values:
+      - href: /azure/media-services/latest/stream-files-tutorial-with-api
+      - href: /azure/media-services/latest/analyze-videos-tutorial-with-api
+    - title: Media Services v2
+      values:
+      - href: /azure/media-services/previous/media-services-dotnet-get-started
+      - href: 
