--- a/articles/active-directory/managed-service-identity/index.yml
+++ b/articles/active-directory/managed-service-identity/index.yml
@@ -15,11 +15,11 @@ metadata:
   ms.topic: landing-page
   ms.date: 03/16/2018
   ms.author: daveba
-  ms.openlocfilehash: a6262b67e3d2029765ba798705234cb6be8abbd3
-  ms.sourcegitcommit: 96089449d17548263691d40e4f1e8f9557561197
+  ms.openlocfilehash: ca90d9d2bb3fffb65d2cefe156d0425de9634bdd
+  ms.sourcegitcommit: b6319f1a87d9316122f96769aab0d92b46a6879a
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 05/17/2018
+  ms.lasthandoff: 05/20/2018
 abstract:
   description: Hanterad tjänstidentitet (Managed Service Identity – MSI) tillhandahåller Azure-tjänster med en automatiskt hanterad identitet i Azure Active Directory (Azure AD). Du kan använda den här identiteten för att autentisera till alla tjänster som stöder Azure AD-autentisering utan att behöva ha några autentiseringsuppgifter i koden.  Lär dig hur du skapar och hanterar hanterade tjänstidentiteter med våra snabbstarter och självstudier.
 sections:
@@ -66,4 +66,4 @@ sections:
     - title: Kommandorad
       html: <p><a href="/powershell/module/azurerm.managedserviceidentity#managed_service_identity">Azure PowerShell</a></p><p><a href="/cli/azure/identity">Azure CLI</a></p>
     - title: Språk
-      html: <p><a href="dotnet/api/microsoft.azure.management.resourcemanager.fluent.authentication#azure-dotnet">.NET</a></p><p><a href="https://github.com/Azure/azure-libraries-for-java#ready-to-run-code-samples-for-virtual-machines">Java</a></p><p><a href="/javascript/api/ms-rest-azure">Node.js</a></p><p><a href="/python/api/azure.mgmt.msi">Python</a></p></p><a href="https://rubygems.org/gems/azure_mgmt_msi">Ruby</a></p></p><a href="https://godoc.org/github.com/Azure/azure-sdk-for-go/services/msi/mgmt/2015-08-31-preview/msi">Go</a></p>
+      html: <p><a href="/dotnet/api/microsoft.azure.management.resourcemanager.fluent.authentication#azure-dotnet">.NET</a></p><p><a href="https://github.com/Azure/azure-libraries-for-java#ready-to-run-code-samples-for-virtual-machines">Java</a></p><p><a href="/javascript/api/ms-rest-azure">Node.js</a></p><p><a href="/python/api/azure.mgmt.msi">Python</a></p></p><a href="https://rubygems.org/gems/azure_mgmt_msi">Ruby</a></p></p><a href="https://godoc.org/github.com/Azure/azure-sdk-for-go/services/msi/mgmt/2015-08-31-preview/msi">Go</a></p>
