--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -7,17 +7,17 @@
 - name: Snabbstarter
   expanded: true
   items:
-    - name: Dirigera webbtrafik – Portalen
+    - name: Hantera webbtrafik –portalen
       href: quick-create-portal.md
-    - name: Dirigera webbtrafik – PowerShell
+    - name: Hantera webbtrafik – PowerShell
       href: quick-create-powershell.md
-    - name: Dirigera webbtrafik – Azure CLI
+    - name: Hantera webbtrafik – Azure CLI
       href: quick-create-cli.md
 - name: Självstudier
   items:
     - name: Hantera webbtrafik
       href: tutorial-manage-web-traffic-cli.md
-    - name: Begränsa webbtrafik
+    - name: Aktivera brandvägg för webbaserade program
       href: tutorial-restrict-web-traffic-cli.md
     - name: Skydda med SSL
       href: tutorial-ssl-cli.md
@@ -35,18 +35,23 @@
       href: cli-samples.md
 - name: Begrepp
   items:
+    - name: SSL-avslutning
+      href: ssl-overview.md
+    - name: Översikt över SSL-princip
+      href: application-gateway-ssl-policy-overview.md
     - name: Brandvägg för webbaserade program
       href: waf-overview.md
     - name: URL-routning
       href: url-route-overview.md
     - name: Värdtjänster för flera webbplatser
       href: multiple-site-overview.md
-    - name: SSL-avslutning
-      href: ssl-overview.md
-    - name: URL-omdirigering
+    - name: Stöd för omdirigering
       href: redirect-overview.md
+    - name: Stöd för flera klienter
     - name: Hälsoövervakning
       href: application-gateway-probe-overview.md
+    - name: WebSocket-stöd
+      href: application-gateway-websocket.md
 - name: Instruktionsguider
   items:
     - name: Skapa Application Gateway
@@ -55,10 +60,20 @@
           href: create-vmss-template.md
         - name: Webbappar – PowerShell
           href: create-web-app.md
-    - name: Aktivera SSL-avslutning – Portalen
+        - name: Konfigurera en intern belastningsutjämnare
+          href: application-gateway-ilb.md
+    - name: Konfigurera SSL-avslutning – portalen
       href: create-ssl-portal.md
     - name: Tillhandahåll värdtjänster för flera webbplatser – Portalen
       href: create-multiple-sites-portal.md
+    - name: Anpassa WAF-regler
+      items:
+        - name: Azure Portal
+          href: application-gateway-customize-waf-rules-portal.md
+        - name: Azure PowerShell
+          href: application-gateway-customize-waf-rules-powershell.md
+        - name: Azure CLI
+          href: application-gateway-customize-waf-rules-cli.md
     - name: Omdirigera extern trafik
       items:
         - name: Azure PowerShell
@@ -87,6 +102,8 @@
       href: tutorial-restrict-web-traffic-powershell.md
     - name: SSL-avslutning med Azure PowerShell
       href: tutorial-ssl-powershell.md
+    - name: Förnya certifikat
+      href: renew-certificates.md
     - name: Tillhandahåll värdtjänster för flera webbplatser med hjälp av Azure PowerShell
       href: tutorial-multiple-sites-powershell.md
     - name: Dirigera webbtrafik med hjälp av Azure PowerShell
@@ -111,6 +128,8 @@
           href: application-gateway-diagnostics.md
 - name: Referens
   items:
+    - name: CRS-regler
+      href: application-gateway-crs-rulegroups-rules.md
     - name: Azure CLI
       href: /cli/azure/network/application-gateway
     - name: Azure PowerShell
