--- a/articles/azure-stack/user/TOC.yml
+++ b/articles/azure-stack/user/TOC.yml
@@ -55,6 +55,8 @@
               href: azure-stack-manage-vm-disks.md
             - name: Skydda virtuella datorer
               href: azure-stack-manage-vm-protect.md
+            - name: SQL Server-VM-överväganden
+              href: azure-stack-sql-server-vm-considerations.md
         - name: Storage
           items:
             - name: Översikt
@@ -104,7 +106,7 @@
         - name: Konfigurera utvecklingsmiljön
           items:
             - name: Installera Azure Stack PowerShell
-              href: azure-stack-powershell-install.md
+              href: 'https://docs.microsoft.com/azure/azure-stack/user/azure-stack-powershell-install'
             - name: Ladda ned verktyg
               href: azure-stack-powershell-download.md
             - name: Konfigurera PowerShell – användare
